# testando_libs

kafka/: CMakeLists.txt  Dockerfile  conanfile.txt  docker-compose.yaml  getting-started.ini
kafka/src/: common.c  common.h  consumer.c  producer.c
redis/: CMakeLists.txt  conanfile.txt  docker-compose.yaml
redis/src/: main.c
